--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather APP</title>
-    <script defer src="App.js"></script>
+    <script defer type="module" src="App.js"></script>
 </head>
 <body>
     
