--- a/index.html
+++ b/index.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather APP</title>
+    <link rel="stylesheet" href="styles.css">
     <script defer type="module" src="App.js"></script>
 </head>
 <body>
+
+    <div class="location">
+        <h1 class="location-timezone">TimeZone</h1>
+        <p>Icon</p>
+    </div>
+    <div class="temperature">
+        <div class="degree-section">
+            <h2 class="temperature-degree">34</h2>
+            <span>F</span>
+        </div>
+        <div class="temperature-description">It's cold </div>
+    </div>
+
     
 </body>
 </html>
