--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@
 
     <div class="location">
         <h1 class="location-timezone">TimeZone</h1>
-        <p>Icon</p>
+        <canvas class="icon" width="128" height="128"></canvas>
     </div>
     <div class="temperature">
         <div class="degree-section">
             <h2 class="temperature-degree">34</h2>
-            <span>F</span>
+            <span>C</span>
         </div>
         <div class="temperature-description">It's cold </div>
     </div>
 
+    <script src="skycons.js"></script>
     
 </body>
 </html>
